<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PictoBug</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="name">Name</string>
    <string name="opponent_name">%s</string>
    <string name="no_opponent">none (yet)</string>
    <string name="codename">%s</string>

    <string name="Host">Make</string>
    <string name="Client">Join</string>
    <string name="accept">OK</string>
    <string name="Prompt2">Make a room or Join existing one?</string>
    <string name="Prompt1">Enter your username:</string>

    <string name="disconnectBTN">Disconnect</string>
    <string name="Advertising">Current Broadcasts: %d</string>
    <string name="Hosting">Hosting</string>
    <string name="status_connected">Connected</string>


    <string name="sendBtn">Send</string>
    <string name="drawBtn">Draw</string>
    <string name="messageBtn">Msg</string>
    <string name="EraserBtn">Erase</string>
    <string name="BrushBtn">Brush</string>
    <string name="ClearBtn">Clear</string>
    <string name="start">Start</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="message">%s: %s</string>
    <string name="toastConnected">Connected to: %s</string>

    <string name="username"></string>
</resources>
